  appended to topics set by U:Lined servers, patched by WolfSage
- #0003382 reported by stealth regarding nested C-style comments messing
  up example.conf parsing
- #0003092 reported by tabrisnet, patched by WolfSage, regarding
  documentation says
  link::bind-ip is optional, but not specifying it produces an error
- #0003232 reported by vonitsanet patched by djGrr, regarding /map is not
  shown u:lined servers to local opers and /links does
- #0003363 patched by adrianp, changing IRC_UID and IRC_GID into
  defines IRC_USER, IRC_GROUP which is a string specifiying what user name/
  group name that should be changed into, instead of a hardcoded gid/uid.
  This should make it easier for packaged binary releases to work (even
  though this probably means Debian will take us in, ick .. Can't we pull
  a new fight with debian-legal again?)
- #0003244 reported by CuLpA about grammar errors in webtv outputs
- Entering 3.2.7 RC1 phase
- Applied patch to fix some win32 problems reported by Bock, fixed by fez 
- #0003405 repoted by Stealth regarding wildcards and autoconnect being an 
  ||
- Fixed irc_uid|gid being defined on win32
- Win32 library updates from Bock
- #0003429 reported by Bock about appearing to accept multiple auth blocks.
- Fixed fixed #003244 fix.
- Applied #0003422 help.conf patches by Bock
- Applied #0002999 patch by Bock, fixing a fd leak.
- Applied #0003144 patch by Bock, fixing win32 install and such
- Applied #0003392 patch by Bock, adding some stuff to help.conf
- Entering 3.2.7 RC2 phase
- Fix, fix #0003421 patch
- Fixed wolfsage eff-up in c-ares.tar.gz, not running make distclean
- Updated /info
- Updated release notes
*** 3.2.7 release ***
- Fix aquanight's email
- #0003351 reported by Mareo regarding m_addmotd.so and m_svslusers.so 
  not being created
- Fixed bug in SJOIN, possibly causing things like odd bans showing up in
  some circumstances. Reported by Hurga, patch provided by fbi.